# azure-blob-lister

./: README.md  pyproject.toml
azure-blob-lister/: main.py
